[tool.poetry]
name = "smartutils"
version = "0.0.1"
description = "Your description here"
authors = ["wuruimiao <dev.wuruimiao@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "~6.0.2"
loguru = "~0.7.3"
contextvars = "~2.4"
python-dotenv = "~1.1.0"
orjson = "~3.10.18"

sqlalchemy = { version = "~2.0.38", extras = ["asyncio"], optional = true }
asyncmy = { version = "~0.2.10", optional = true }
asyncpg = { version = "~0.30.0", optional = true }

redis = { version = "~5.2.1", optional = true }

aiokafka = { version = "~0.12.0", optional = true }
python-snappy = { version = "~0.7.3", optional = true }
zstandard = { version = "~0.23.0", optional = true }

fastapi = { version = "~0.115.11", optional = true }
starlette = { version = "~0.46.2", optional = true }
pydantic = { version = "~2.10.6", optional = true }
# includes: uvloop, httptools, websockets, watchgod, python-dotenv
uvicorn = { version = "~0.34.0", extras = ["standard"], optional = true }

ulid-py = { version = "~1.1.0", optional = true }

bcrypt = { version = "~4.3.0", optional = true }

PyJWT = { version = "~2.10.1", optional = true }

pyotp = { version = "~2.9.0", optional = true }
qrcode = { version = "~8.1", optional = true }

opentelemetry-sdk = { version = "~1.33.1", optional = true }
opentelemetry-instrumentation-fastapi = { version = "~0.54b1", optional = true }
opentelemetry-exporter-otlp = { version = "~1.33.1", optional = true }
opentelemetry-instrumentation-requests = { version = "~0.54b1", optional = true }

#pip install opentelemetry-distro # 开箱即用

[poetry.group.dev.dependencies]
pytest = "~8.3.5"
pytest-cov = "~6.1.1"
pytest-asyncio = "~0.26.0"
httpx = "~0.28.1"
import-linter = "~2.3"
pydeps = "~3.0.1"
tomlkit = "~0.13.2"
locust = "~2.37.5"

[tool.poetry.extras]
mysql = ["sqlalchemy", "asyncmy"]
pgsql = ["sqlalchemy", "asyncpg"]
redis = ["redis"]
kafka = ["aiokafka", "python-snappy", "zstandard"]
fastapi = ["fastapi", "starlette", "pydantic", "ulid-py", "uvicorn"]
auth = ["bcrypt", "PyJWT", "pyotp", "qrcode"]
opentelemetry = [
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-requests",
]
all = [
    "PyYAML",
    "loguru",
    "contextvars",
    "sqlalchemy",
    "asyncmy",
    "asyncpg",
    "redis",
    "aiokafka",
    "python-snappy",
    "zstandard",
    "fastapi",
    "starlette",
    "pydantic",
    "ulid-py",
    "uvicorn",
    "bcrypt",
    "PyJWT",
    "pyotp",
    "qrcode",
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
